nginx-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
        - name: auth-backend
          image: nginx:1.13-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
