nginx-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-backend-service
  namespace: my-app
spec:
  selector:
    app: auth-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
